--- a/_posts/2015-11-13-zebra.md
+++ b/_posts/2015-11-13-zebra.md
@@ -4,6 +4,7 @@ title: 大体いい感じの研究発表ができるKeynoteテンプレート「
 categories: ['diary']
 tags: ['ReleaseNote']
 published: True
+eyecatch: https://dl.dropboxusercontent.com/u/12208857/img/zebra1.jpg
 ---
 
 <script async class="speakerdeck-embed" data-id="33dbc4b1166e45cca57400eeeaf0db4f" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script>
