Updated the post: pypi

--- a/_posts/2014-12-22-pypi.md
+++ b/_posts/2014-12-22-pypi.md
@@ -110,6 +110,9 @@ dist/
 まず[PyPI](https://pypi.python.org/pypi) > Registerでアカウントを作成します。次に下記のコマンドを実行します。
 
 {% highlight bash %}
+# PyPIアカウントでログイン
+$ python setup.py register
+
 # register.pyを作成している場合
 $ python register.py
 
