--- a/_posts/2015-11-13-zebra.md
+++ b/_posts/2015-11-13-zebra.md
@@ -2,7 +2,7 @@
 layout: post
 title: 大体いい感じの研究発表ができるKeynoteテンプレート「Zebra」を作った
 categories: ['diary']
-tags: ['ReleaseNote']
+tags: ['ReleaseNote', 'Design']
 published: True
 eyecatch: https://dl.dropboxusercontent.com/u/12208857/img/zebra1.jpg
 ---
