--- a/_posts/2016-09-28-mensa.md
+++ b/_posts/2016-09-28-mensa.md
@@ -9,7 +9,7 @@ eyecatch: https://dl.dropboxusercontent.com/u/12208857/img/mensa02.png
 
 ### 背景
 
-僕が在籍しているカイザースラウテルン工科大学にはMENSAと呼ばれる食堂があって、普段はここで昼食をとっている。おすすめは2種類の日替わりメニューで、学生は入り口の電子掲示板を見てEssen1/2のどちらかを選ぶ。しかしこの掲示板、ドイツ語表記で写真もないので、ドイツ語が読めない留学生は列の長さ（人気度）だけでメニューを決めなければならないという問題を抱えている。
+僕が在籍しているカイザースラウテルン工科大学にはMENSAと呼ばれる食堂があって、普段はここで昼食をとっている。おすすめは2種類の日替わりメニュー。学生は入り口の電子掲示板を見てEssen1/2のどちらかを選ぶ。しかしこの掲示板、ドイツ語表記で写真もないので、ドイツ語が読めない学生は列の長さ（人気度）だけでメニューを決めなければならないという問題を抱えている。
 
 <img src="https://dl.dropboxusercontent.com/u/12208857/img/mensa01.jpg" class="image-on-frame image-fade">
 
@@ -23,12 +23,10 @@ eyecatch: https://dl.dropboxusercontent.com/u/12208857/img/mensa02.png
 1. Microsoftの翻訳APIを使って日本語に機械翻訳する
 1. TwitterのAPIを使って専用アカウントから投稿する
 
-集めたデータはすべて保存し、httpリクエストで取り出せるようにした。従っていろいろなサービスと連携させることができる。例えば<br>
-[http://api.mrk1869.com/mensa/v1/?date=23.09.2016](http://api.mrk1869.com/mensa/v1/?date=23.09.2016)<br>
-で2016年9月23日に僕が食べたメニューを取得することができる。
+集めたデータはすべて保存し、httpリクエストで取り出せるようにした。例えば [http://api.mrk1869.com/mensa/v1/?date=23.09.2016](http://api.mrk1869.com/mensa/v1/?date=23.09.2016) で2016年9月23日に僕が食べたメニューが返ってくる。Twitter以外にも様々なサービスと連携させることができる。
 
 ### 特徴
 
-「作っていた」と書いたのは、このBotは3年前にこちらに留学していたときに作ったものだから。（当時のメモ: [PythonでMicrosoft Translator APIを使ってみる](http://shoya.io/blog/microsoft_translator/)）その後システムは何も手を加えられることもなく動き続け、今も毎日使われている。サーバーの設定・APIの仕様・大学Webサイトのどれか一つでも変わると止まってしまうことを考えると、今も動き続けているのは奇跡といえる。僕がいなかった間も毎日投稿しながら帰りを待っていたのかと思うと感慨深い。
+「作っていた」と書いたのは、このBotは3年前にこちらに留学していたときに作ったものだから。（当時のメモ: [PythonでMicrosoft Translator APIを使ってみる](http://shoya.io/blog/microsoft_translator/)）その後システムは何も手を加えられることもなく動き続け、今も毎日使われている。サーバーの設定やAPIの仕様、大学Webサイトのレイアウトなど、どれか一つでも変わると止まってしまうことを考えると、動き続けているのは奇跡といえる。僕がいなかった間も毎日投稿しながら帰りを待っていたのかと思うとなんだか愛着が湧いてくる。
 
 [Today's Mensa(@TodaysMensa)さん \| Twitter](https://twitter.com/todaysmensa)
