Minor changes in a post

--- a/_posts/2016-09-28-mensa.md
+++ b/_posts/2016-09-28-mensa.md
@@ -23,7 +23,7 @@ eyecatch: https://dl.dropboxusercontent.com/u/12208857/img/mensa02.png
 1. Microsoftの翻訳APIを使って日本語に機械翻訳する
 1. TwitterのAPIを使って専用アカウントから投稿する
 
-集めたデータはすべて保存し、httpリクエストで取り出せるようにした。例えば [http://api.mrk1869.com/mensa/v1/?date=23.09.2016](http://api.mrk1869.com/mensa/v1/?date=23.09.2016) で2016年9月23日に僕が食べたメニューが返ってくる。Twitter以外にも様々なサービスと連携させることができる。
+集めたデータはすべて保存し、httpリクエストで取り出せるようにしている。例えば [http://api.mrk1869.com/mensa/v1/?date=23.09.2016](http://api.mrk1869.com/mensa/v1/?date=23.09.2016) で2016年9月23日のメニューが返ってくる。従ってTwitter以外にも様々なサービスと連携させることができる。
 
 ### 特徴
 
