Modified some texts for the new layout

--- a/_posts/2014-04-07-naples.md
+++ b/_posts/2014-04-07-naples.md
@@ -46,7 +46,7 @@ relations:
 
 <img src="https://dl.dropboxusercontent.com/u/12208857/img/naples11.jpg" class="image-on-frame">
 
-ずいぶん歩いてお腹が空いたので、遺跡を出たところでピッツァを食べました。本場のマルゲリータ。トマトがみずみずしくて、まさに絶品。生まれて初めてトマトをうまいと感じた。
+ずいぶん歩いてお腹が空いたので、遺跡を出たところでピッツァを食べました。本場のマルゲリータ。トマトがみずみずしくて、絶品。生まれて初めてトマトをうまいと感じた。
 
 <img src="https://dl.dropboxusercontent.com/u/12208857/img/naples12.jpg" class="image-on-frame">
 
