--- a/_posts/2014-04-08-roma.md
+++ b/_posts/2014-04-08-roma.md
@@ -29,7 +29,7 @@ relations:
 
 <img src="https://dl.dropboxusercontent.com/u/12208857/img/roma11.jpg" class="image-on-frame">
 
-有名ですね。手を入れるには列に並ぶ必要があるのですが(日本人ばかりだった...)、回転率がやたら早くてすぐに順番が回ってきました。教会ではカップルが結婚式をあげていました。
+手を入れるには列に並ぶ必要があるのですが(日本人ばかりだった...)、回転率がやたら早くてすぐに順番が回ってきました。教会ではカップルが結婚式をあげていました。
 
 <p class="injection-center">バチカン市国</p>
 
@@ -61,15 +61,14 @@ relations:
 
 <img src="https://dl.dropboxusercontent.com/u/12208857/img/roma43.jpg" class="image-on-frame">
 
-ローマの路地は、日本やドイツに比べて綺麗なわけじゃないけれど、どこか風情がありました。
+ローマの路地は、日本やドイツに比べて綺麗なわけじゃないけれど、風情があります。
 
 <img src="https://dl.dropboxusercontent.com/u/12208857/img/roma44.jpg" class="image-on-frame">
 
 ホテルのオーナーに勧められて、近くのお店でボンゴレビアンコを食べた。
-オーナーからは「だぶんぼったくられるけど、俺がサイン書いておけば正規の値段で食べられるから」といってよく分からない紙を渡されました。
-イタリアはなんでもありだなぁとつくづく思う。
+オーナーからは「だぶんぼったくられるけど、俺がサイン書いておけば正規の値段で食べられるから」と言われてよく分からない紙を渡されました。
+イタリアはなんでもありだなぁと思う。
 
 <img src="https://dl.dropboxusercontent.com/u/12208857/img/roma51.jpg" class="image-on-frame">
 
 帰りの飛行機から見えた雪一面のアルプス。
-写真には収まりきらない美しさがありました。
