--- a/_posts/2014-05-03-mac_tex.md
+++ b/_posts/2014-05-03-mac_tex.md
@@ -56,7 +56,7 @@ open $filename.pdf
 
 {% endhighlight %}
 
-あと研究室秘伝のテンプレートファイルは往々にしてShift-JISだったりするので、UTF-8に変換してから使っている。
+あと研究室秘伝のテンプレートファイルはShift-JISだったりするので、UTF-8に変換してから使っている。
 変換後は円マークをバックスラッシュに置換する必要がある。
 
 {% highlight bash %}
