--- a/_posts/2014-05-16-up.md
+++ b/_posts/2014-05-16-up.md
@@ -8,7 +8,7 @@ keywords: UP, Jawbone, ポモドーロ, スリープ
 eyecatch: https://dl.dropboxusercontent.com/u/12208857/img/up.jpg
 ---
 
-UPを使い始めて1年が経つ。UPは運動・睡眠・食事を記録するライフログツールなんだけど、生活の記録以外にも、振動するデバイスを腕につけるっていうところに面白みを感じている。ということでちょっと変わった使い方をしているので、それらを紹介しようと思う。
+UPを使い始めて1年が経つ。UPは運動・睡眠・食事を記録するライフログツールなんだけど、生活の記録以外にも、振動するデバイスを腕につけるっていうところに面白みを感じる。ということでちょっと変わった使い方をしているので、それらを紹介しようと思う。
 
 <img src="https://dl.dropboxusercontent.com/u/12208857/img/up2.jpg" class="image-on-frame-medium">
 
