--- a/_posts/2017-12-26-DFKI3.md
+++ b/_posts/2017-12-26-DFKI3.md
@@ -10,7 +10,7 @@ description: "研究留学 Advent Calendar 2017 26日目の記事です。アド
 
 <img src="/assets/img/blog_dfki3.jpg" class="image-on-frame image-fade">
 
-[研究留学 Advent Calendar 2017](https://adventar.org/calendars/2562#list-2017-12-24) 26日目の記事です。アドベントカレンダーに26日目は存在しないのですが、研究留学ACを見かけたときには既に25日分埋まっていたのと、素晴らしい記事を読んで自分も何か残したいと思って、非公式ながら勝手に書かせていただきました。
+[研究留学 Advent Calendar 2017](https://adventar.org/calendars/2562) 26日目の記事です。アドベントカレンダーに26日目は存在しないのですが、研究留学ACを見かけたときには既に25日分埋まっていたのと、素晴らしい記事を読んで自分も何か残したいと思って、非公式ながら勝手に書かせていただきました。
 
 学生の頃に留学したところに就職という体験は珍しそうなので、本記事では留学生として/研究員としての滞在を比較してみることにしました。以下概要です。
 
@@ -51,9 +51,9 @@ DFKI (Deutsches Forschungszentrum für Künstliche Intelligenz)は人工知能
 
 研究員として戻ってきてからは、研究所内で担う役割が日に日に大きくなっています。具体的には、**教わる側から教える側に、メンバーからリーダーに**という変化です。
 
-かつて留学生だった頃に博士学生のもとで研究していたように、今度は自分がTUKや他大学から来ている学生を指導しています。学期ごとに入れ替わりがありますが、常に8人以上、多いときでは11人を同時に見ています。この1年半で試行錯誤を繰り返したことで、学生に合わせた指導少しずつできるようになったような気がします(やるべきことを自分で考えてもらったり、1ステップごとに手取り足取り教えた方がよかったり)。仕事を始めた頃は「英語で教えるのは英語で教わるのに比べてなんて難しいんだろう」と悩んでいたのですが、そのあたりの壁も乗り越えつつあります。
+かつて留学生だった頃に博士学生のもとで研究していたように、今度は自分がTUKや他大学から来ている学生を指導しています。学期ごとに入れ替わりがありますが、常に8人以上、多いときでは11人を同時に見ています。この1年半で試行錯誤を繰り返したことで、学生ひとりひとりに合わせた指導が少しずつできるようになりました(自分で考えられるのが理想だけど、人によって手取り足取り教えた方がよかったり、あるいはそのバランス)。仕事を始めた頃は「英語で教えるのは英語で教わるのに比べてなんて難しいんだろう」と悩んでいたのですが、そのあたりの壁も乗り越えつつあります。
 
-昨年の12月頃からはProject leadとしての仕事が始まりました。研究の進め方が変わり、実装や実験をすべて1人で行うのではなく、メンバーが取り組むのにちょうどよい粒度の独立したテーマに区切って、それらを組み合わせることで大きな問題を解くようになりました。議論や情報共有を活発にするグループ運営のノウハウも溜まってきました。研究助成への申請にも挑戦しています。これまでに2件の申請書を書き、どちらも無事に採択されました。
+昨年の12月頃からはProject leadとしての仕事が始まりました。研究の進め方を変えて、実装や実験をすべて1人で行うのではなく、メンバーが取り組むのにちょうどよい粒度の独立したテーマに区切って、それらを組み合わせることで大きな問題を解くようになりました。議論や情報共有を活発にするグループ運営のノウハウも溜まってきました。研究助成への申請にも挑戦しています。これまでに2件の申請書を書き、どちらも無事に採択されました。
 
 少し大変なのは、役割が大きくなるにしたがってドイツ語が必要になる場面が増えてきたことです。留学生の頃はゲストだったので「すみません英語で」といって許されていたのですが、最近はミーティングなどの場でそろそろドイツ語で話してほしいと思われているような雰囲気をひしひしと感じています。あと、仕事が面白すぎて博論を書く手が止まるという状況にならないように気をつけようと心がけています。
 
