--- a/_posts/2012-11-02-honor.md
+++ b/_posts/2012-11-02-honor.md
@@ -7,7 +7,7 @@ tags: ['Note']
 keywords: 大阪府立大学, 学長顕彰
 ---
 
-アプリ開発コンテストの功績により学長顕彰を戴きました。<br>
+アプリ開発コンテストの功績により学長顕彰を戴きました。<br/>
 次は研究で成果をあげられるよう頑張ります。
 
-<img src="/assets/img/blog_honor_myphoto.jpg" class="image-on-frame">
+<img src="/assets/img/blog_honor_myphoto.jpg" class="image-on-frame" />
