--- a/_posts/2012-12-06-kotodama.md
+++ b/_posts/2012-12-06-kotodama.md
@@ -17,7 +17,7 @@ relations:
 
 <img src="/assets/img/blog_kotodama_screenshot.png" class="image-on-frame-small">
 
-ある朝僕は寝坊しました。起きてTwitterを開くと、タイムラインは友達の「寝坊したああ1コマ単位やばいいいい」というツイートで埋め尽くされていました。どうやら同じように寝坊した人がたくさんいるみたいです。<br>
+ある朝僕は寝坊しました。起きてTwitterを開くと、タイムラインは友達の「寝坊したああ1コマ単位やばいいいい」というツイートで埋め尽くされていました。どうやら同じように寝坊した人がたくさんいるみたいです。<br/>
 それを見たとき「もしこの状況を寝る前に想像できていれば、夜更かしなんてしないで早く寝ていたのになぁ」と後悔しました。そして思いついたのがこのkotodamaです。
 
 kotodamaをひとことで説明すると「真夜中にtwitterやってると寝坊を後悔するツイートの爆撃を浴びせてくるTwitterBot」です。一日に投稿されたツイートの中から寝坊を後悔しているものを抽出しておき、真夜中の3時になるとそれらをこのBotが放出します。みんなの後悔や怨念が言霊となり深夜に化けてでてくるわけです。
