--- a/_posts/2012-12-21-paperboy.md
+++ b/_posts/2012-12-21-paperboy.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 株式会社Paperboy&co.に半年ほどお世話になりました
+title: 株式会社Paperboy&amp;co.に半年ほどお世話になりました
 published: True
 categories: ['blog']
 tags: ['Note']
@@ -12,7 +12,7 @@ relations:
   - imabari
 ---
 
-今年の6月から7ヶ月間、株式会社Paperboy&co.でアプリエンジニアとしてアルバイトしました。年内でやめることになり今日がその最終出勤日なので、半年間を振り返りました。
+今年の6月から7ヶ月間、株式会社Paperboy&amp;co.でアプリエンジニアとしてアルバイトしました。年内でやめることになり今日がその最終出勤日なので、半年間を振り返りました。
 
 <img src="/assets/img/blog_paperboy_picture.jpg" class="image-on-frame-small">
 
@@ -45,14 +45,14 @@ relations:
 ひとの話の受け売りなのですが、「プロの元に弟子入りした料理人が皿洗いのなかでどうやって技術を磨くか」という話があります。自分の与えられた仕事をこなすことだけに集中する見習いは皿洗いの技術しか習得できません。伸びる見習いは皿洗いのなかで垣間見る料理の下ごしらえであったり中間物の様子など調理場の裏でしか手に入らない情報を盗むことで料理の力をつけるそうです。
 
 僕はこの話を聞いて後悔しました。
-アプリを開発するなかでGitHubのコードを見て勉強させてもらっていたのだけれど、大事なのはそこじゃなかった。Webサービスやアプリを作る上で途中生成される企画案やモデル、プログラム、デザインや開発の流れ、組織といったノウハウこそを見て学ぶべきだった。<br>
-(このあたりを外部に公開されてるペパボはやっぱりすごい会社だと思う。)<br>
+アプリを開発するなかでGitHubのコードを見て勉強させてもらっていたのだけれど、大事なのはそこじゃなかった。Webサービスやアプリを作る上で途中生成される企画案やモデル、プログラム、デザインや開発の流れ、組織といったノウハウこそを見て学ぶべきだった。<br/>
+(このあたりを外部に公開されてるペパボはやっぱりすごい会社だと思う。)<br/>
 [【デザイン】 Androidアプリアイコンのデザイン過程晒してみた 【QR Scanner】](http://matome.naver.jp/odai/2135512162843875201)
 なので、次回なにかを勉強する場所に入り込めた時は[何ができるか＋何が学べるか]を意識して活動しようと思います。
 
 ## ペパボのいいところ
 
-ペパボっていいなぁと思うのは、社員ひとりひとりがクリエイターであることを楽しんでいるところです。定期的にコンテストや開発合宿が行われていたり、社内外問わず自分の活動を積極的にアウトプットしているひとが多かったり。サービスを作る人はそれだけサービスを楽しんでいるし、それがクリエイティビティに繋がるのだろうなと感じました。<br>
+ペパボっていいなぁと思うのは、社員ひとりひとりがクリエイターであることを楽しんでいるところです。定期的にコンテストや開発合宿が行われていたり、社内外問わず自分の活動を積極的にアウトプットしているひとが多かったり。サービスを作る人はそれだけサービスを楽しんでいるし、それがクリエイティビティに繋がるのだろうなと感じました。<br/>
 東京で[お産合宿](http://www.paperboy.co.jp/next/osan6/)に参加したのは良い思い出で、日頃の部署や業務の垣根をとりはらってそれぞれのできる企画やプログラムやデザインを集結して開発を行う光景は非常にワクワクするものでした。
 
 エンジニアという目線からもペパボは魅力的な会社です。このあたりは一緒に働いていた足立くんが書いてくれたので、そちらを読んでいただければと思います。
