--- a/_posts/2013-04-11-swiper.md
+++ b/_posts/2013-04-11-swiper.md
@@ -17,7 +17,7 @@ relations:
 
 [<img src="/assets/img/blog_swiper_aoa.png" class="image-center">](https://itunes.apple.com/jp/app/swiper-zhi-gan-cao-zuodetodo/id631354108)
 
-Swiperは直感的に操作できるToDo/タスク管理アプリです。<br>
+Swiperは直感的に操作できるToDo/タスク管理アプリです。<br/>
 “スワイプ”や”長押し”といったジェスチャーを組み込むことでボタンの数を減らし、すっきりとしたデザインに仕上げました。
 
 ## こんな用途におすすめ
