--- a/_posts/2013-12-26-berlin.md
+++ b/_posts/2013-12-26-berlin.md
@@ -23,41 +23,41 @@ relations:
 
 <p class="injection-center">イーストサイドギャラリー</p>
 
-<img src="/assets/img/blog_berlin01.JPG" class="image-on-frame">
+<img src="/assets/img/blog_berlin01.JPG" class="image-on-frame" />
 
 シュレー川沿いに約1.3kmに渡って残されたベルリンの壁の跡を利用したペイントアート。国内外のアーティスト118人によって自由や平和へのメッセージが描かれています。
 
 <p class="injection-center">チェックポイント・チャーリー</p>
 
-<img src="/assets/img/blog_berlin02.JPG" class="image-on-frame">
+<img src="/assets/img/blog_berlin02.JPG" class="image-on-frame" />
 
 東西分断時に同盟所国外の人と西独外交官のための国境検問所があった場所。当時の検問所を再現した建物が立てられています。
 
-<img src="/assets/img/blog_berlin03.JPG" class="image-on-frame">
+<img src="/assets/img/blog_berlin03.JPG" class="image-on-frame" />
 
 近くには壁博物館があり、陸海空いろいろなアプローチから国境超えを試みた人たちの写真や記録資料、その時に使われた道具が展示されています。スピーカーやスーツケースを改造してその中に入ったり、気球を使って空から超えたり、命を懸けた様々な工夫を知ることができて、今回の旅行では最も興味深い場所でした。
 
 <p class="injection-center">トポグラフィー・オブ・テラー</p>
 
-<img src="/assets/img/blog_berlin04.JPG" class="image-on-frame">
+<img src="/assets/img/blog_berlin04.JPG" class="image-on-frame" />
 
 そして壁の跡。ナチス時代のゲシュタポ(国家警察)に関する博物館の近くには500mにわたって当時のベルリンの壁が保存されています。
 
 <p class="injection-center">クリスマスマーケット</p>
 
-<img src="/assets/img/blog_berlin11.JPG" class="image-on-frame">
+<img src="/assets/img/blog_berlin11.JPG" class="image-on-frame" />
 
-<img src="/assets/img/blog_berlin12.JPG" class="image-on-frame">
+<img src="/assets/img/blog_berlin12.JPG" class="image-on-frame" />
 
 雪の上をソリで下るアトラクションを見たのは初めてでした。さすがベルリン、クリスマスマーケットの規模大きい。
 
 <p class="injection-center">博物館島</p>
 
-<img src="/assets/img/blog_berlin21.JPG" class="image-on-frame">
+<img src="/assets/img/blog_berlin21.JPG" class="image-on-frame" />
 
 シュプレー川の中洲には5つの博物館が集まる「博物館島」があり、先史時代から19世紀まで、約6000年に渡る西洋文明史をたどることができます。それぞれ入場料は８ユーロから10ユーロほどですが、14ユーロの共通入場パスを買うのがおすすめです。今回はボーデ博物館、旧ナショナルギャラリー、ペルガモン博物館を見学しました。
 
-<img src="/assets/img/blog_berlin22.JPG" class="image-on-frame">
+<img src="/assets/img/blog_berlin22.JPG" class="image-on-frame" />
 
 ペルガモン博物館のイシュタール門は特に圧巻。感動した。
 
