--- a/_posts/2014-04-07-naples.md
+++ b/_posts/2014-04-07-naples.md
@@ -17,7 +17,7 @@ relations:
 
 今回イタリアへ飛んだ一番の目的はアマルフィを訪れること。[2005年夏・南イタリア旅行記～アマルフィ～](http://www.geocities.jp/yamagami_italia/amalfi.html) を参考にして、ナポリからベスビオ周遊鉄道でソレントへ移動し、海岸に沿ってバスでアマルフィまで移動する計画を立てました。
 
-<img src="/assets/img/blog_italy_map_amalfi.png" class="image-on-frame">
+<img src="/assets/img/blog_italy_map_amalfi.png" class="image-on-frame" />
 
 ところがソレントに到着してバスのチケットを買おうとしたところ、なんと崖崩れが原因でアマルフィに向かうバスがストップしているとのこと。
 アマルフィへ行きたいのだが他に手段はないかと駅員さんに聞くと「鉄道を乗り継いで海岸の反対側(サレルノ)に行けば、向こうのバスは走ってるかもね。」との返事。
@@ -25,46 +25,46 @@ relations:
 
 <p class="injection-center">ポンペイ遺跡</p>
 
-<img src="/assets/img/blog_naples01.jpg" class="image-on-frame">
+<img src="/assets/img/blog_naples01.jpg" class="image-on-frame" />
 
 
 鉄道乗換えのために立ち寄ったポンペイ。良い機会なので遺跡を観光することに。
 
-<img src="/assets/img/blog_naples02.jpg" class="image-on-frame">
+<img src="/assets/img/blog_naples02.jpg" class="image-on-frame" />
 
 西暦79年(日本は弥生時代)にベスビオ火山の噴火で火山灰に埋もれたポンペイ。
 およそ1700年後にポンペイは発掘され、今では建造物や街区が古代ローマ当時のままの唯一の町として知られている。
 火山灰を主体とする火砕流堆積物には乾燥剤として用いられるシリカゲルに似た成分が含まれ、湿気を吸収した。この火山灰が町全体を隙間なく埋め尽くしたため、壁画や美術品の劣化が最小限に食い止められたのである。([Wikipedia](http://ja.wikipedia.org/wiki/%E3%83%9D%E3%83%B3%E3%83%9A%E3%82%A4)より)
 
-<img src="/assets/img/blog_naples04.jpg" class="image-on-frame">
+<img src="/assets/img/blog_naples04.jpg" class="image-on-frame" />
 
-<img src="/assets/img/blog_naples05.jpg" class="image-on-frame">
+<img src="/assets/img/blog_naples05.jpg" class="image-on-frame" />
 
 十字に交差する小道を歩いていると、突然視界が開けて目の前に闘技場がそびえ立っている。この感覚はRPGのダンジョンを探索しているかのようで非常にワクワクしました。
 
 <p class="injection-center">マルゲリータ</p>
 
-<img src="/assets/img/blog_naples11.jpg" class="image-on-frame">
+<img src="/assets/img/blog_naples11.jpg" class="image-on-frame" />
 
 ずいぶん歩いてお腹が空いたので、遺跡を出たところでピッツァを食べました。本場のマルゲリータ。トマトがみずみずしくて、絶品。生まれて初めてトマトをうまいと感じた。
 
-<img src="/assets/img/blog_naples12.jpg" class="image-on-frame">
+<img src="/assets/img/blog_naples12.jpg" class="image-on-frame" />
 
 店員さんにピザを焼く釜の写真を撮っていいかと尋ねたところ「俺も写してくれるならいいよ」と快く承諾してくれた。今回の旅で出会ったイタリア人、みんな気さくすぎる。
 
 <p class="injection-center">アマルフィ海岸</p>
 
-<img src="/assets/img/blog_naples21.jpg" class="image-on-frame">
+<img src="/assets/img/blog_naples21.jpg" class="image-on-frame" />
 
 紺碧の海、断崖絶壁、レモンの香り。
 残念ながらシーズンではなかったものの、アマルフィの美しさは評判どおりでした。
 また機会があれば、次は夏に訪れたい。
 
-<img src="/assets/img/blog_naples22.jpg" class="image-on-frame">
+<img src="/assets/img/blog_naples22.jpg" class="image-on-frame" />
 
 アマルフィ大聖堂。綺麗な鐘の音が響く。
 
-<img src="/assets/img/blog_naples23.jpg" class="image-on-frame">
+<img src="/assets/img/blog_naples23.jpg" class="image-on-frame" />
 
 <img src="/assets/img/blog_naples24.jpg" class="image-on-frame-small">
 
@@ -72,7 +72,7 @@ relations:
 街が特産品であるレモンの香りに包まれているのもいい。
 レモンリキュールを買って飲みました。
 
-<img src="/assets/img/blog_naples31.jpg" class="image-on-frame">
+<img src="/assets/img/blog_naples31.jpg" class="image-on-frame" />
 
 ナポリへ帰った頃にはあたりは真っ暗。
 白い壁が特徴のアマルフィとは対照的に、ナポリは街全体が薄暗く、治安はよろしくない感じ。
