--- a/_posts/2018-04-17-bahncard.md
+++ b/_posts/2018-04-17-bahncard.md
@@ -22,7 +22,7 @@ relations:
 
 <img src="/assets/img/blog_bahncard.jpg" class="image-on-frame-small image-fade">
 
-ドイツで働き始めて2年経ってもこうしたトラブルが絶えないのでときどき心折れそうになる。ちなみにこちらの写真は[2年前の5月に受け取った封筒](https://www.instagram.com/p/BFMmqKbLWFC/?taken-by=shoya140)。「住み始めたばかりなのにいきなりレッドカードとかどうしよう...」と思ったらただの広告だった。紛らわしい！
+ドイツで働き始めて2年経ってもこうしたトラブルが絶えないのでときどき心折れそうになる。ちなみにこちらの写真は[2年前の5月に受け取った封筒](https://www.instagram.com/p/BFMmqKbLWFC/?taken-by=shoya140)。「住み始めたばかりなのにいきなりレッドカードとか詰んだ...」と思ったらただの広告だった。紛らわしい！
 
 [^1]: 学割・年齢による割引・キャンペーンなどによって値段が異なる
 [^2]: courtはテニスコート・裁判所なんて訳をまさか日常生活で使うと思ってなかった
