--- a/_posts/2013-08-20-Paletta.md
+++ b/_posts/2013-08-20-Paletta.md
@@ -32,7 +32,7 @@ relations:
 
 混色系とは、色の混ぜあわせを数値にしたものです。混ぜあわせに使う赤/緑/青の大きさを示すRGB値や、シアン/マゼンタ/イエローの大きさを示すCMY値が代表例です。これらは数学的に扱いやすいので、コンピュータ上で処理がしやすいという利点があります。
 
-顕色系とは、色を色相、彩度、明度で数値化する表色系です。上図右のマンセル色立体を見るとイメージしやすいのではないでしょうか。円の角度が色相、半径が彩度、軸の高さが明度を示しています。暗めの赤や薄い青など、人間の知覚に近いかたちで表現できるという利点があります。
+顕色系とは、色を色相・彩度・明度で数値化する表色系です。右のマンセル色立体を見るとイメージしやすいのではないでしょうか。円の角度が色相、半径が彩度、軸の高さが明度を示しています。暗めの赤や薄い青など、人間の知覚に近いかたちで表現できるという利点があります。
 
 混色系で選ぶと、顕色系と比較して<span style="color:#ff0000;font-weight:600;">彩</span><span style="color:#00ff00;font-weight:600;">度</span><span style="color:#0000ff;font-weight:600;">の</span><span style="color:#ffff00;font-weight:600;">高</span><span style="color:#00ffff;font-weight:600;">い</span><span style="color:#ff00ff;font-weight:600;">色</span>になりがちです。既存のカラーパレットのほとんどや#123456のようなカラーコードで「いい感じの色」を選びにくいのは、混色系をベースにしているからです。
 
